[package]
name = "rs_tracing"
version = "0.1.0"
authors = ["Andreas Jonson"]
readme = "README.md"
license = "MIT"
description = "a crate that outputs trace events in the trace event format"
repository = "https://github.com/andjo403/rs_tracing.git"
keywords = ["profiler", "trace"]

[lib]
crate-types = ["rlib", "dylib"]

[dependencies]
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, default-features = false}
time = { version = "0.1", optional = true }

[features]
rs_tracing = ["serde_json", "serde", "time"]