[package]
name = "rs_tracing"
version = "1.1.0"
authors = ["Andreas Jonson"]
readme = "README.md"
license = "MIT"
description = "trace events in the trace event format"
documentation = "https://docs.rs/rs_tracing/"
repository = "https://github.com/andjo403/rs_tracing.git"
keywords = ["profiler", "trace"]

[dependencies]
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

[features]
rs_tracing = ["serde_json", "serde"]
